@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2022-09-28:
+
+- Fixed a bug where LINENO was reset to 1 after being temporarily changed in
+  an assignment preceding a regular command (e.g. LINENO=5 true).
+
 2022-09-27:
 
 - Fixed a parsing bug in (uncommonly used) function definitions of the
